k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: exbanka-2
  labels:
    name: exbanka-2
